style.css
/*Blue Color: #257FC4 */

/** {
	border: solid black 1px;
}*/

body {
	background-color: #f2f2f2;
	font-family: Futura;
	margin: 0px;
}


a {
	text-decoration: none;
	color: black;
}

a:visited {
	color: black;
}

#index-main {
	width: 450px;
	margin: 150px auto;
	background-color: white;
	border: 1px solid #257FC4;
	border-radius: 5px;
	/*box-shadow: 5px 5px 5px #767676;*/
	padding: 100px 55px 70px 55px;
}

#index-main h1 {
	text-align: center;
	color: #257FC4;
	font-weight: 200;
	border-bottom: solid 1px #257FC4;
	margin: auto;
	width: 300px;
}

#links {
	list-style-type: none;
	text-align: center;
	padding: 0px;
	font-weight: 100;
	margin: 0px;
	margin-bottom: 10px;
}

#links li {
	/*background-color: lightgrey;*/
	/*border-bottom: 1px solid black;*/
	padding-top: 10px;
}

li:hover {
	background-color: #257FC4;
	color: white;
}

#contact {
	color: grey;
	text-align: center;
	font-size: 13px;
	margin: 15px auto 0px auto;
	border-top: solid 1px #257FC4;
	width: 300px;
	padding-top: 10px;
}

header {
	background-color: white;
	border-bottom: 1px solid #257FC4;
	padding-left: 50px;
}

header h1{
	color: #257FC4;
	display: inline-block;
	margin: 0px;
	vertical-align: bottom;
	width: 335px;
	text-align: center;
	height: 100%;
}

nav {
	display: inline-block;
	vertical-align: top;
}

nav ul {
	list-style-type: none;
	margin: 0px;
	text-align: center;
	padding: 0px;
} 

nav li {
	display: inline-block;
	width: 150px;
	padding: 20px 0px 8px 0px;
}

#page {
	width: 80%;
	margin: auto;
	margin-top: 50px;
	margin-bottom: 50px;
	background-color: white;
	border: 1px solid #257FC4;
	border-radius: 5px;
	/*box-shadow: 5px 5px 5px #767676;*/
	padding: 50px 55px 70px 55px;
	text-align: center;
}

#page h2 {
	color: #257FC4;
}

#page > ul {
	width: 60%;
	text-align: left;
	margin: auto;
}

#page li:hover {
	background-color: white;
	color: black;
}

p {
	width: 90%;
	margin: auto;
}

@media screen and (max-width: 1175px) {
	header h1 {
		display: block;
		margin: auto;
		padding-top: 10px;
	}

	nav {
		display: block;
		margin: auto;
	}

	header {
		padding-left: 0px;
	}
}

@media screen and (max-width: 835px) {
	#page {
		display: block;
		width: 100%;
		border-radius: 0px;
		border-width: 1px 0px 1px 0px;
		padding: 30px 0px 30px 0px;
	}
	nav li {
		display: block;
		width: 100%;
	}

	h1 {
		font-size: 25px;
	}

	h2 {
		font-size: 20px;
	}

	p {
		font-size: 15px;

	}
}

@media screen and (max-width: 560px) {
	#index-main h1{
		
		margin-left: 0px;
		margin-right: 0px;
		margin: auto;
	}

	#index-main {
		display: block;
		width: 100%;
		margin: 75px auto;
		padding-left: 0px;
		padding-right: 0px;
		border-radius: 0px;
		border-width: 1px 0px 1px 0px;
	}
}

